--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,9 +43,11 @@ dependencies {
     implementation "com.jakewharton:butterknife:10.2.3"
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'com.github.nhatpham0301:vietmap-sdk:1.0.3'
-    implementation 'com.github.nhatpham0301:vietmap-android-navigation-ui:1.1.2'
+    implementation 'com.github.nhatpham0301:vietmap-android-navigation-ui:1.1.3'
     implementation 'com.github.nhatpham0301:vietmap-android-navigation:1.0.2'
     implementation 'org.maplibre.gl:android-sdk-services:5.9.0'
     implementation 'org.maplibre.gl:android-sdk-turf:5.9.0'
     implementation 'com.squareup.picasso:picasso:2.8'
+//    implementation 'com.mapbox.mapboxsdk:mapbox-android-gestures:0.7.0'
+//    implementation files('/Users/dev/Documents/demo_app/VietMapAndroidNavigationExample/MapboxGLAndroidSDK-release.aar')
 }
