migrate to vietmap service

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -42,12 +42,18 @@ dependencies {
     implementation "com.google.android.gms:play-services-location:21.0.1"
     implementation "com.jakewharton:butterknife:10.2.3"
     implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'com.github.nhatpham0301:vietmap-sdk:1.0.3'
-    implementation 'com.github.nhatpham0301:vietmap-android-navigation-ui:1.1.3'
-    implementation 'com.github.nhatpham0301:vietmap-android-navigation:1.0.2'
-    implementation 'org.maplibre.gl:android-sdk-services:5.9.0'
-    implementation 'org.maplibre.gl:android-sdk-turf:5.9.0'
+    implementation 'com.github.vietmap-company:maps-sdk-android:1.0.0'
+    implementation 'com.github.vietmap-company:maps-sdk-navigation-ui-android:1.1.0'
+    implementation 'com.github.vietmap-company:maps-sdk-navigation-android:1.1.0'
+    implementation 'com.github.vietmap-company:vietmap-services-directions-models:1.0.1'
+    implementation 'com.github.vietmap-company:vietmap-services-turf-android:1.0.2'
+    implementation 'com.github.vietmap-company:vietmap-services-android:1.0.8'
     implementation 'com.squareup.picasso:picasso:2.8'
+    implementation 'com.github.vietmap-company:vietmap-services-geojson-android:1.0.0'
+
+    implementation group: 'com.squareup.okhttp3', name: 'okhttp', version: '3.2.0'
+
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
 //    implementation 'com.mapbox.mapboxsdk:mapbox-android-gestures:0.7.0'
 //    implementation files('/Users/dev/Documents/demo_app/VietMapAndroidNavigationExample/MapboxGLAndroidSDK-release.aar')
 }
